@@ -7,7 +7,7 @@ use warnings;
 use Error::Pure qw(err);
 use List::Util qw(none);
 use Readonly;
-use Scalar::Util qw(blessed);
+use Scalar::Util qw(blessed looks_like_number);
 
 Readonly::Array our @EXPORT_OK => qw(check_angle check_array check_array_object
 	check_array_required check_bool check_code check_isa check_length
@@ -150,7 +150,7 @@ sub check_number {
 
 	_check_key($self, $key) && return;
 
-	if ($self->{$key} !~ m/^[-+]?\d+(\.\d+)?$/ms) {
+	if (! looks_like_number($self->{$key})) {
 		err "Parameter '$key' must be a number.",
 			'Value', $self->{$key},
 		;
@@ -487,9 +487,10 @@ Returns undef.
 
  check_number($self, $key);
 
-I<Since version 0.01. Described functionality since version 0.09.>
+I<Since version 0.01. Described functionality since version 0.26.>
 
 Check parameter defined by C<$key> which is number (positive or negative) or no.
+Number could be integer, float, exponencial and negative.
 
 Put error if check isn't ok.
 
@@ -499,9 +500,10 @@ Returns undef.
 
  check_number_min($self, $key, $min);
 
-I<Since version 0.25.>
+I<Since version 0.25. Described functionality since version 0.26.>
 
 Check parameter defined by C<$key> which is number greater than C<$min> value.
+Number could be integer, float, exponencial and negative.
 
 Put error if check isn't ok.
 
@@ -525,9 +527,10 @@ Returns undef.
 
  check_number_range($self, $key, $min, $max);
 
-I<Since version 0.23.>
+I<Since version 0.23. Described functionality since version 0.26.>
 
 Check if number defined by C<$key> is in range between C<$min> and C<$max>.
+Number could be integer, float, exponencial and negative.
 
 Put error if check isn't ok.
 
