@@ -1,4 +1,6 @@
 0.26
+ - Add support for exponencial and extremely small numbers in
+   check_number(). Rewrite to Scalar::Util::looks_like_number().
 
 0.25 2024-03-14T02:21:19+01:00
  - Add check_number_min().
